@@ -1,3 +1,8 @@
+2005-02-10  Bruno Haible  <bruno@clisp.org>
+
+	* allocsa.h (sa_alignof): Define differently with AIX xlc, to avoid
+	a bug of this compiler on AIX 3.2.5 dealing with enums.
+
 2005-02-07  Bruno Haible  <bruno@clisp.org>
 
 	* c-strcase.h: New file, based on strcase.h.
